# TileGameV2

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  TODO.txt  factoryTest.cpp  factoryTest2.cpp
Resources/: Game.json  TileGameV2.icns  level_0.tmx  level_1.tmx  level_fat.tmx  mario_anim.txt  settings.ini
Resources/Animation/: coin.txt  enemy.txt
Resources/Entity/: Coin.json  Enemy.json  NextLevel.json
src/: Main.cpp
src/Core/Debug/: Assert.h
src/Core/Engine/: Body.cpp  Body.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Force.cpp  Force.h  Game.cpp  Game.h  GamePad.cpp  GamePad.h  Physics.cpp  Physics.h  RessourceManager.cpp  RessourceManager.h  Screen.cpp  Screen.h  TileMapLand.cpp  TileMapLand.h  View.cpp  View.h  World.cpp  World.h
src/Core/Engine/platform/: PlatformPhysic.cpp  PlatformPhysic.h
src/Core/Factory/: BasicType.cpp  BasicType.h  Factory.h
src/Core/Graphics/: Anim.cpp  Anim.h  AnimatedTile.cpp  AnimatedTile.h  DrawableGroupe.cpp  DrawableGroupe.h  RessourceManager.h  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h
src/Core/Loader/: Scene2D.cpp  Scene2D.h  TMXLoader.cpp  TMXLoader.hpp
src/Core/Loader/JSON/: JSON.h  JSONHelper.cpp  JSONHelper.h
src/Game/: AnimatedSpriteView.cpp  AnimatedSpriteView.h  BasicIA.cpp  BasicIA.h  Coin.cpp  Coin.h  Enemy.cpp  Enemy.h  FactoryGlue.cpp  FactoryGlue.h  KeyBoardGamePad.cpp  KeyBoardGamePad.h  MoveForce.cpp  MoveForce.h  PlateformerPhysic.cpp  PlateformerPhysic.h  Player.cpp  Player.h  TileGame.cpp  TileGame.h  TileMapLand.cpp  TileMapTerrain.cpp  TileMapTerrain.h
